Implemented another observe feature

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
 <div class="container p-3">
-  <div class="row">
-    <app-data-form></app-data-form>
-  </div>
+  <router-outlet></router-outlet>
 </div>
