--- a/frontend/src/app/component/dynamic-data-form/dynamic-data-form.component.html
+++ b/frontend/src/app/component/dynamic-data-form/dynamic-data-form.component.html
@@ -38,9 +38,7 @@
     </div>
 
     <a class="btn btn-primary" (click)="addNewRow()">Új sor felvitele</a>
-
-
-
+    
+    <button class="btn btn-secondary mt-2 w-100 save-btn" (click)="navigateBack()">Vissza</button>
     <button class="btn btn-primary mt-2 w-100" (click)="onSubmit()">Mentés</button>
-    <button class="btn btn-secondary mt-2 w-100 save-btn" routerLink="/">Vissza</button>
 </form>
