--- a/frontend/src/app/component/home/home.component.html
+++ b/frontend/src/app/component/home/home.component.html
@@ -1,6 +1,5 @@
 
 <img src="./../../../assets/logo.png" alt="lukacs-team-logo" class="img-fluid"/>
 <div class="d-flex flex-column justify-content-center">
-    <a class="btn btn-primary my-2" routerLink="/work">Munkalap</a>
-    <a class="btn btn-primary" routerLink="/control-table">Kártevő-ellenőrzési táblázat</a>
+    <a class="btn btn-primary mt-2" routerLink="/customers">Partnerek</a>
 </div>
