--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -13,3 +13,5 @@ $theme-colors: (
 );
 
 @import "../node_modules/bootstrap/scss/bootstrap";
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
