--- a/frontend/src/app/component/customers/customer-details/customer-details.component.html
+++ b/frontend/src/app/component/customers/customer-details/customer-details.component.html
@@ -1,18 +1,18 @@
 <div class="container">
     <div class="row">
-        <p>
-            Név: {{customer?.name}}
-        </p>
-    </div>
-    <div class="row">
-        <p>
-            Cím: {{customer?.address}}
-        </p>
-    </div>
-    <div class="row">
         <a class="btn btn-secondary" (click)="navigateBack()">Vissza</a>
         <a class="btn btn-primary my-2" (click)="goToWorksheet(customer?._id)">Munkalap</a>
         <a class="btn btn-primary" (click)="goToTable(customer?._id)">Kártevő-ellenőrzési táblázat</a>
+    </div>
+    <div class="row mt-3">
+        <h3>
+            Név: {{customer?.name}}
+        </h3>
+    </div>
+    <div class="row">
+        <h3>
+            Cím: {{customer?.address}}
+        </h3>
     </div>
     <div>
         <h4>Dokumentumok</h4>
