Some minor css improvements

--- a/frontend/src/app/component/customers/customer-details/customer-details.component.html
+++ b/frontend/src/app/component/customers/customer-details/customer-details.component.html
@@ -14,9 +14,9 @@
             Cím: {{customer?.address}}
         </h3>
     </div>
-    <div>
+    <div class="row mt-2">
         <h4>Dokumentumok</h4>
-        <table class="table table-success table-striped">
+        <table class="table table-success table-striped table-hover">
             <thead>
                 <tr>
                     <th>Név</th>
