--- a/frontend/src/app/component/data-form/data-form.component.html
+++ b/frontend/src/app/component/data-form/data-form.component.html
@@ -37,8 +37,10 @@
     <app-signature-pad name="client" title="Megrendelő (munkavégzést igazoló)" (signatureCreated)="onClientSignatureCreated($event)"></app-signature-pad>
     <app-signature-pad name="worker" title="Munkavégző" (signatureCreated)="onWorkerSignatureCreated($event)"></app-signature-pad>
     <button class="btn btn-secondary mt-2 w-100 save-btn" (click)="navigateBack()">Vissza</button>
-    <div class="alert alert-primary my-2" role="alert" *ngIf="success">
-        Sikeres Munkalap Felvitel!
+    <div class="my-2">
+        <div class="alert alert-primary" role="alert" *ngIf="success">
+            Sikeres Munkalap Felvitel!
+        </div>
     </div>
     <button type="submit" class="btn btn-primary w-100 back-btn" (click)="onSubmit()" [disabled]="!isFormValid()">Mentés</button>
 </form>
