--- a/frontend/src/app/component/dynamic-data-form/dynamic-data-form.component.html
+++ b/frontend/src/app/component/dynamic-data-form/dynamic-data-form.component.html
@@ -40,8 +40,10 @@
     <a class="btn btn-primary" (click)="addNewRow()">Új sor felvitele</a>
     
     <button class="btn btn-secondary mt-2 w-100 save-btn" (click)="navigateBack()">Vissza</button>
-    <div class="alert alert-primary my-2" role="alert" *ngIf="success">
-        Sikeres rögzítés!
+    <div class="my-2">
+        <div class="alert alert-primary" role="alert" *ngIf="success">
+            Sikeres rögzítés!
+        </div>
     </div>
     <button class="btn btn-primary w-100" (click)="onSubmit()">Mentés</button>
 </form>
