--- a/frontend/src/app/component/home/home.component.html
+++ b/frontend/src/app/component/home/home.component.html
@@ -1,5 +1,5 @@
 
 <img src="./../../../assets/logo.png" alt="lukacs-team-logo" class="img-fluid"/>
 <div class="d-flex flex-column justify-content-center">
-    <a class="btn btn-primary mt-2" routerLink="/customers">Partnerek</a>
+    <a class="btn btn-primary mt-2" routerLink="/customers"><i class="bi bi-people-fill"></i><span> Partnerek</span></a>
 </div>
