--- a/frontend/src/app/component/customers/list-customer/list-customer.component.html
+++ b/frontend/src/app/component/customers/list-customer/list-customer.component.html
@@ -1,10 +1,10 @@
 <!-- list-customer.component.html -->
 <div class="container mt-4">
     <div class="row">
-        <a class="btn btn-primary w-100" routerLink="/">Vissza</a>
+        <a class="btn btn-primary w-100" routerLink="/"><i class="bi bi-arrow-left-square"></i><span> Vissza</span></a>
     </div>
     <div class="row">
-        <a class="btn btn-secondary w-100 mt-2" routerLink="/add-customer">Partner felvitele</a>
+        <a class="btn btn-secondary w-100 mt-2" routerLink="/add-customer"><i class="bi bi-person-plus-fill"></i><span> Partner felvitele</span></a>
     </div>
     <div class="row my-3">
         <input id="typeahead-basic" type="text" class="form-control" placeholder="Keresés..." [(ngModel)]="model"
@@ -23,7 +23,7 @@
                 <tr *ngFor="let customer of customers">
                     <td>{{ customer.name }}</td>
                     <td>{{ customer.address }}</td>
-                    <td><a class="btn btn-primary" [routerLink]="[customer._id]">Részletek</a></td>
+                    <td><a class="btn btn-primary" [routerLink]="[customer._id]"><i class="bi bi-eye"></i><span> Részletek</span></a></td>
                 </tr>
             </tbody>
         </table>
