--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -15,3 +15,4 @@ $theme-colors: (
 @import "../node_modules/bootstrap/scss/bootstrap";
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
+@import "../node_modules/bootstrap-icons/font/bootstrap-icons.css";
