--- a/frontend/src/app/component/dynamic-data-form/dynamic-data-form.component.html
+++ b/frontend/src/app/component/dynamic-data-form/dynamic-data-form.component.html
@@ -1,49 +1,54 @@
 <h4 class="text-center">Adatok megadása</h4>
-<form [formGroup]="myForm">
-    <div class="mb-3">
-        <label for="workplace" class="form-label">Munkavégzés helye:</label>
-        <input id="workplace" formControlName="workplace" type="text" class="form-control" />
-    </div>
+<ng-container *ngIf="myForm">
+    <form [formGroup]="myForm">
+        <div class="mb-3">
+            <label for="workplace" class="form-label">Munkavégzés helye:</label>
+            <input id="workplace" formControlName="workplace" type="text" class="form-control" />
+        </div>
 
-    <div class="mb-3">
-        <label for="date" class="form-label">Időpontja:</label>
-        <input id="date" formControlName="date" type="text" class="form-control" />
-    </div>
+        <div class="mb-3">
+            <label for="date" class="form-label">Időpontja:</label>
+            <input id="date" formControlName="date" type="text" class="form-control" />
+        </div>
 
-    <div class="mb-3">
-        <label for="usedItems" class="form-label">Szerelvény típusa:</label>
-        <input id="usedItems" formControlName="usedItems" type="text" class="form-control" />
-    </div>
+        <div class="mb-3">
+            <label for="usedItems" class="form-label">Szerelvény típusa:</label>
+            <input id="usedItems" formControlName="usedItems" type="text" class="form-control" />
+        </div>
 
-    <div class="mb-3">
-        <label for="usedAcids" class="form-label">Felhasznált írtószer:</label>
-        <input id="usedAcids" formControlName="usedAcids" type="text" class="form-control" />
-    </div>
-    <div *ngFor="let rowData of rowDataFormGroup; let dataIdx = index" class="border border-primary my-1 p-1">
-        <div [formGroup]="rowData">
-            <h4>Sorszám {{dataIdx+1}}</h4>
-            <div class="mb-3">
-                <label for="observation1" class="form-label">Észlelés:</label>
-                <input id="observation1" formControlName="observation1" type="text" class="form-control" />
-            </div>
-            <div class="mb-3">
-                <label for="observation2" class="form-label">Észlelés:</label>
-                <input id="observation2" formControlName="observation2" type="text" class="form-control" />
-            </div>
-            <div class="mb-3">
-                <label for="note" class="form-label">Megjegyzés:</label>
-                <input id="note" formControlName="note" type="text" class="form-control" />
+        <div class="mb-3">
+            <label for="usedAcids" class="form-label">Felhasznált írtószer:</label>
+            <input id="usedAcids" formControlName="usedAcids" type="text" class="form-control" />
+        </div>
+        <div *ngFor="let rowData of rowDataFormGroup; let dataIdx = index" class="border border-primary my-1 p-1">
+            <div [formGroup]="rowData">
+                <h4>Sorszám {{dataIdx+1}}</h4>
+                <div class="mb-3">
+                    <label for="observation1" class="form-label">Észlelés:</label>
+                    <input id="observation1" formControlName="observation1" type="text" class="form-control" />
+                </div>
+                <div class="mb-3">
+                    <label for="observation2" class="form-label">Észlelés:</label>
+                    <input id="observation2" formControlName="observation2" type="text" class="form-control" />
+                </div>
+                <div class="mb-3">
+                    <label for="note" class="form-label">Megjegyzés:</label>
+                    <input id="note" formControlName="note" type="text" class="form-control" />
+                </div>
             </div>
         </div>
-    </div>
 
-    <a class="btn btn-primary" (click)="addNewRow()"><i class="bi bi-plus-square"></i><span> Új sor felvitele</span></a>
-    
-    <button class="btn btn-secondary mt-2 w-100 save-btn" (click)="navigateBack()"><i class="bi bi-arrow-left-square"></i><span> Vissza</span></button>
-    <div class="my-2">
-        <div class="alert alert-primary" role="alert" *ngIf="success">
-            Sikeres rögzítés!
+        <a class="btn btn-primary" (click)="addNewRow()"><i class="bi bi-plus-square"></i><span> Új sor
+                felvitele</span></a>
+
+        <button class="btn btn-secondary mt-2 w-100 save-btn" (click)="navigateBack()"><i
+                class="bi bi-arrow-left-square"></i><span> Vissza</span></button>
+        <div class="my-2">
+            <div class="alert alert-primary" role="alert" *ngIf="success">
+                Sikeres rögzítés!
+            </div>
         </div>
-    </div>
-    <button class="btn btn-primary w-100" (click)="onSubmit()"><i class="bi bi-floppy"></i><span> Mentés</span></button>
-</form>
+        <button class="btn btn-primary w-100" (click)="onSubmit()"><i class="bi bi-floppy"></i><span>
+                Mentés</span></button>
+    </form>
+</ng-container>
